fix: adjusted margin in counter component for improved spacing

--- a/open-ecommerce/src/components/css/counter.css
+++ b/open-ecommerce/src/components/css/counter.css
@@ -13,7 +13,7 @@
     border-radius: 50%;
     background-color: var(--white-text-color);
     border: .1px solid var(--gray-border-color);
-    margin: 0 5px;
+    margin: 0 10px;
     padding: 10px 10px;
 }
 
